--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
-name = "Questia"
+name = "questia"
 version = "0.1.0"
-authors = ["Matthew Kaminski <kaminskimateusz7@gmail.com>"]
+authors = ["Matthew Kaminski <questiagame@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+gfx = "0.18.2"
+gfx-hal = "0.5.3"
+gfx-backend-vulkan = "0.5"
+winit = "0.22.2"
